# Kaggle_comp_NESP

./: .gitignore  LICENSE.md  README.md  pyproject.toml
Apps/: data_cleaning.py  data_loading.py  data_preprocessing.py  feature_engineering.py  lev_dist_func.py  model_training.py  scrath.py  submission.csv
Jupyter_Notebook/: Kaggle_notebook.ipynb  Scratch_notebook.ipynb
Test/: test_data_cleaning.py  test_data_loading.py  test_data_preprocessing.py  test_feature_engineering.py
