[tool.poetry]
name = "Kaggle_comp_NESP"
version = "0.1.0"
description = ""
authors = ["PyJacobito"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.1"
scikit-learn = "^1.1.3"
numpy = "^1.23.4"
protlearn = "^0.0.3"
mlxtend = "^0.21.0"
jupyterlab = "^3.5.1"
transformers = "^4.25.1"
hyperopt = "^0.2.7"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
mypy = "^0.990"
flake8 = "^5.0.4"
kaggle = "^1.5.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
